--- a/public/index.html
+++ b/public/index.html
@@ -131,16 +131,6 @@
         <h1>SQL Injection Wargame</h1>
         <div class="wargame-list">
             <div class="wargame-card">
-                <h3>단계별 학습</h3>
-                <p>기본 인증 우회부터 데이터베이스 정보 수집까지 5단계로 구성된 체계적인 SQL Injection 학습 과정입니다.</p>
-                <button onclick="location.href='sql-injection-levels'">시작하기</button>
-            </div>
-            <div class="wargame-card">
-                <h3>실습 환경</h3>
-                <p>다양한 시나리오에서 SQL Injection을 연습할 수 있는 실습 환경입니다. 사용자, 상품, 주문 데이터를 대상으로 실습하세요.</p>
-                <button onclick="location.href='sql-practice'">실습하기</button>
-            </div>
-            <div class="wargame-card">
                 <h3>Level 1</h3>
                 <p>기본적인 SQL Injection 우회 기법을 연습할 수 있는 로그인 문제입니다.<br>admin 계정의 FLAG를 노려보세요.</p>
                 <button onclick="location.href='wargame-level1.html'">도전하기</button>
@@ -152,7 +142,7 @@
             </div>
             <div class="wargame-card">
                 <h3>Level 3</h3>
-                <p>WAF(웹 방화벽) 필터링을 우회하여<br>admin FLAG를 얻는 고급 SQL Injection 문제입니다.</p>
+                <p>admin 필터링을 우회하여 admin 계정으로 로그인하면 FLAG를 획득할 수 있습니다</p>
                 <button onclick="location.href='wargame-level3.html'">도전하기</button>
             </div>
             <div class="wargame-card">
