--- a/public/wargame-level3.html
+++ b/public/wargame-level3.html
@@ -37,7 +37,7 @@
         <hr/>
         <div>
             <b>Query</b>
-            <pre>SELECT * FROM users WHERE username = '${username}';</pre>
+            <pre>SELECT * FROM users WHERE userid = '${userid}';</pre>
         </div>
     </div>
 </body>
