--- a/public/wargame-level2.html
+++ b/public/wargame-level2.html
@@ -37,7 +37,7 @@
         <hr/>
         <div>
             <b>Query</b>
-            <pre>SELECT * FROM users WHERE username = '${username}' AND password = '${password}';</pre>
+            <pre>SELECT * FROM users WHERE userid = '${userid}' AND password = '${userpassword}';</pre>
         </div>
     </div>
 </body>
